# RAG-Assistant

./: README.md  chunking_text.py  extract_pdf_text.py  main.py  pyproject.toml  text_embedding.py  vector_db_operation.py
chroma_store/: chroma.sqlite3
pdf-store/: Mahindra_Thar_Car_Manual.json  Mahindra_Thar_Car_Manual.txt  Mahindra_Thar_Car_Manual_embedding.json
